--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -5,6 +5,7 @@
     <title>Angular Tour of Heroes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
 
     <!-- Polyfills -->
